romanik style updates

--- a/child_pages/cc-elections/Candidates/romanik.html
+++ b/child_pages/cc-elections/Candidates/romanik.html
@@ -268,7 +268,7 @@
      <div class="candidate-pic-box">
          <img class="cover" src="../../../assets/candidates/romanik.jpg" class="candidate-pic">
          <div class="candidate-pic-box-content">
-             <h4 class="sub-heading">Websites</h4>
+             <h4 class="sub-heading" style="text-align: center;">Websites</h4>
              <div class="website">
 
                 <a href="https://www.facebook.com/profile.php?id=100058813645894" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Mayoral Position Facebook</button></a>
@@ -582,14 +582,17 @@
                     funded sustainably. Examples of how that is done:
                     </p>
                     <ul>
+                        <br>
                     <li><em>CRP build-out & PILOT:</em> A multi-phase project tied to a 30-year PILOT that would generate long-horizon revenues flowing to the general fund for core needs 
                         (e.g., police fleet lifecycle, basic gear for outdoor staff) while emphasizing reinvestment.</li>
+                        <br>
                     <li><em>Levoni Meat Facility Phase Two:</em> Continue shepherding the flagship facility’s expansion from approvals to operation so it converts “dirt and trees” into active ratables.</li>
+                        <br>
                     <li><em>Cannabis receipts:</em> Treat state-shared cannabis revenues as flexible general-fund dollars that can be directed to day-to-day city needs alongside larger capital planning.</li>
                     </ul>
                 </details>
                 </li>
-
+                <br>
                 <li>
                 <details>
                     <summary style="color: blue;"><strong>Prioritize Streets & Undergrounds</strong></summary>
@@ -599,7 +602,7 @@
                     </p>
                 </details>
                 </li>
-
+                <br>
                 <li>
                 <details>
                     <summary style="color: blue;"><strong>Public Safety Retention & Readiness</strong></summary>
@@ -608,7 +611,7 @@
                     </p>
                 </details>
                 </li>
-
+                <br>
                 <li>
                 <details>
                     <summary style="color: blue;"><strong>Regional Coordination & Access</strong></summary>
@@ -637,7 +640,7 @@
                     </p>
                 </details>
                 </li>
-
+                <br>
                 <li>
                 <details>
                     <summary style="color: blue;"><strong>Code Enforcement: Practical & Consistent</strong></summary>
@@ -647,7 +650,7 @@
                     </p>
                 </details>
                 </li>
-
+                <br>
                 <li>
                 <details>
                     <summary style="color: blue;"><strong>High Street “Bump-Outs” & Parking</strong></summary>
@@ -674,7 +677,7 @@
                     </p>
                 </details>
                 </li>
-
+                <br>
                 <li>
                 <details>
                     <summary style="color: blue;"><strong>Industrial Park Momentum</strong></summary>
@@ -684,7 +687,7 @@
                     </p>
                 </details>
                 </li>
-
+                <br>
                 <li>
                 <details>
                     <summary style="color: blue;"><strong>City Chambers Refresh & Lighting</strong></summary>
@@ -693,7 +696,7 @@
                     </p>
                 </details>
                 </li>
-
+                <br>
                 <li>
                 <details>
                     <summary style="color: blue;"><strong>LED “Acorn” Streetlight Upgrades</strong></summary>
@@ -702,7 +705,7 @@
                     </p>
                 </details>
                 </li>
-
+                <br>
                 <li>
                 <details>
                     <summary style="color: blue;"><strong>Pump Station Modernization</strong></summary>
@@ -711,7 +714,7 @@
                     </p>
                 </details>
                 </li>
-
+                <br>
                 <li>
                 <details>
                     <summary style="color: blue;"><strong>Public Safety Contracts</strong></summary>
@@ -735,7 +738,7 @@
                     </p>
                 </details>
                 </li>
-
+                <br>
                 <li>
                 <details>
                     <summary style="color: blue;"><strong>Military College & Army Experience</strong></summary>
@@ -745,7 +748,7 @@
                     </p>
                 </details>
                 </li>
-
+                <br>
                 <li>
                 <details>
                     <summary style="color: blue;"><strong>Elected Commissioner & Mayor</strong></summary>
@@ -755,7 +758,7 @@
                     </p>
                 </details>
                 </li>
-
+                <br>
                 <li>
                 <details>
                     <summary style="color: blue;"><strong>Departmental Oversight (Per His Account)</strong></summary>
@@ -765,7 +768,7 @@
                     </p>
                 </details>
                 </li>
-
+                <br>
                 <li>
                 <details>
                     <summary style="color: blue;"><strong>Regional Networking & Representation</strong></summary>
