--- a/child_pages/cc-elections/Candidates/summers.html
+++ b/child_pages/cc-elections/Candidates/summers.html
@@ -245,6 +245,8 @@
          <div class="candidate-pic-box-content">
              <h4 class="sub-heading" style="text-align: center;">Websites</h4>
              <div class="website">
+                    <a href="https://www.facebook.com/profile.php?id=61582235652629" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Facebook Campaign</button></a>
+
                     <a href="https://www.facebook.com/daveabcdefG" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Facebook (Personal)</button></a>
 
                  
