kears facebook campaign page added

--- a/child_pages/cc-elections/Candidates/kears.html
+++ b/child_pages/cc-elections/Candidates/kears.html
@@ -271,6 +271,8 @@
              <h4 class="sub-heading" style="text-align: center;">Websites</h4>
              <div class="website">
                  
+                <a href="https://www.facebook.com/profile.php?id=61578926090967" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Campaign Facebook</button></a>
+
                 <a href="https://www.facebook.com/profile.php?id=61550738146589" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Personal Facebook</button></a>
 
              </div>
