dixon quick summary and transparency updated

--- a/child_pages/cc-elections/Candidates/mcginty.html
+++ b/child_pages/cc-elections/Candidates/mcginty.html
@@ -287,8 +287,9 @@
              
             <h4 class="sub-heading" style="text-align:center;">Websites</h4>
              <div class="website">
-                 
-                <a href="https://www.facebook.com/tom.s.mcginty" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Facebook</button></a>
+                <a href="https://www.facebook.com/profile.php?id=61579781140261" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Campaign Facebook</button></a>
+
+                <a href="https://www.facebook.com/tom.s.mcginty" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Personal Facebook</button></a>
 
              </div>
 
