--- a/child_pages/cc-elections/Candidates/dixon.html
+++ b/child_pages/cc-elections/Candidates/dixon.html
@@ -669,10 +669,10 @@
     <br>
 
     <div class="gauge-box">
-        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Above Average (Trending Up)</h4>
+        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Average, I Guess (A Mixed Bag)</h4>
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
-        <img class="gauge" src="../../../assets/gauge_okay.svg" alt="">
+        <img class="gauge" src="../../../assets/gauge_dead_center.svg" alt="">
         <!-- <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button> -->
          <details class="can-sec" id="transparency-accessibility">
             <summary style="color: blue;">
