mcquade transparency update

--- a/child_pages/cc-elections/Candidates/mcquade.html
+++ b/child_pages/cc-elections/Candidates/mcquade.html
@@ -935,7 +935,7 @@
 
 
 <div class="gauge-box">
-        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Poised for Top Tier</h4>
+        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Above Average</h4>
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
         <img class="gauge" src="../../../assets/gauge_okay.svg" alt="">
@@ -945,22 +945,35 @@
             <summary style="color: blue;">
                 <strong>Explanation</strong>
             </summary>
-            Robert McQuade has consistently demonstrated an unusual level of openness for a local candidate. When he first ran for Millville City Commission 
-            last year, he immediately expressed interest in collaborating with InformTheVoteNJ.com to discuss his campaign and Millville’s issues in depth. 
-            Since then, he has participated in multiple interviews — from podcast-style sit-downs to radio shows to spontaneous “man-on-the-street” 
-            conversations — and has welcomed follow-up questions each time.
-            <br>
-            <br>
-            In addition to engaging with independent press, McQuade now co-hosts The Talk Around Millville with David Summers on 92.1 FM WVLT on Tuesdays from 
-            6-7pm, a live call-in program that invites residents to discuss community concerns on air. Few local candidates offer that level of real-time 
-            access and public dialogue.
-            <br>
-            <br>
-            However, to fully secure “top-tier” status on transparency and accessibility, McQuade would still need to check some remaining boxes such as 
-            launching a comprehensive, regularly updated campaign website, hold at least one well-advertised public meet-and-greet event specifically designed 
-            for voters to ask questions face-to-face, and formally announcing whether he and Summers are part of a ticket. Taking those kinds of steps would complete 
-            the picture of a candidate who is not only accessible but also 
-            proactively organized and easy for every voter to find.
+            Robert McQuade continues to stand out as one of Millville’s most accessible and community-oriented candidates. Since we started covering his campaign last 
+            year, he has welcomed public dialogue through multiple channels—podcasts, sit-down interviews, and his weekly Talk Around Millville radio show 
+            on WVLT 92.1 FM, co-hosted with David Summers. That platform alone represents a rare model of real-time engagement, inviting residents to call 
+            in and discuss issues directly on air—something almost no other local candidate offers.
+            <br><br>
+            However, McQuade’s 2025 campaign highlights an ongoing tension between personal accessibility and organizational consistency. While he attended 
+            events such as the Four Seasons Forum and the Brewery Meet & Greet (and was likely at the Housing Authority event), he canceled his appearance 
+            at the InformTheVoteNJ Candidates Forum—the only recorded forum of the cycle—after double-booking the same morning/afternoon to create his Facebook 
+            campaign page. On the one hand, that's a missed opportunity from someone pitching a community relations board for city commission, but the 
+            context matters: only a small fraction of Millville’s nineteen 
+            candidates attended the forum, and county politics at large still lack a consistent culture of centralized, recorded, public-facing campaign events
+            and materials the public can conveniently review.
+            <br><br>
+            It’s fair to ask whether McQuade should be faulted for skipping one last-minute, privately organized forum when most of the field skipped as 
+            well. If such events were cultural norms rather than rare exceptions, expectations would be different. But in Cumberland County, transparency 
+            has long depended on a handful of citizen-led efforts—InformTheVoteNJ being the only entity this season to organize a centralized meet-and-greet 
+            and a recorded public forum. That reality reflects more on the system than on any one candidate.
+            <br><br>
+            McQuade’s approach to communication also bears nuance. He often prefers direct phone calls over written exchanges, and his social media posts 
+            sometimes contain grammatical or spelling inconsistencies that suggest correlation to his admitted learning disabilities, where he perhaps has a 
+            reliance on imperfect speech-to-text tools. These traits make his conversational accessibility genuine and personable, even if they occasionally 
+            hinder the formal polish of his digital outreach.
+            <br><br>
+            Ultimately, McQuade represents a form of transparency grounded in human accessibility rather than digital infrastructure. His enthusiasm for 
+            dialogue and accountability is authentic and ongoing, even if not always documented in a structured way. In a political environment where many 
+            candidates avoid engagement altogether, McQuade’s openness—despite imperfections—still sets a higher bar.
+            <br><br>
+            Overall rating: Above Average — consistently accessible and conversationally transparent, with minor organizational gaps that reflect broader 
+            cultural shortcomings in how Cumberland County handles campaign communication.
         </details>
     </div> 
 
