ranello quick sum and transparency updated

--- a/child_pages/cc-elections/Candidates/ranello.html
+++ b/child_pages/cc-elections/Candidates/ranello.html
@@ -141,23 +141,29 @@
               <h4 class="quick-sum">quick summary</h4>
               <h6 class="page-title">Marissa Ranello</h6>
               <p>
-                Marissa Ranello is a former Millville City Commissioner and current alternate on the Millville Zoning Board of Adjustment. She is seeking 
-                election to the City Commission with a platform focused on restoring safety, cleanliness, and pride in Millville to make it a place where 
-                families and businesses want to invest.
-                <br>
-                <br>
-                Ranello emphasizes situational crime prevention by improving lighting, securing vacant properties, and strengthening neighborhood ties. She 
-                also proposes aggressive cleanup efforts to combat litter, illegal dumping, and neglected properties, alongside building partnerships for
-                addiction and mental health recovery in line with federal initiatives. Her approach prioritizes creating a safer, cleaner environment as the 
-                foundation for long-term economic development—arguing that growth cannot succeed when built on neglect.
-                <br>
-                <br>
-                Ranello holds a Bachelor’s degree in Law and Justice from Rowan University. She previously chaired the Board Governance and Policy Committee 
-                while serving on the Millville Board of Education and led the Department of Parks and Public Property during her time as a City Commissioner.
-                <br>
-                <br>
-                She describes her candidacy as nonpartisan and purpose-driven, grounded in values of hard work, accountability, and service, with the aim of 
-                delivering a functional and community-oriented city government.
+                Marissa Ranello is a former Millville City Commissioner, current alternate on the Zoning Board of Adjustment, and advocate for local 
+                revitalization through accountability and hands-on community involvement. She holds a Bachelor’s degree in Law and Justice from Rowan 
+                University and has previously chaired the Board Governance and Policy Committee on the Millville Board of Education. Her experience across 
+                education, public property management, and city governance has given her a strong grasp of local operations, budgeting, and policy 
+                implementation.
+                <br><br>
+                Ranello’s campaign centers on a practical, neighborhood-first philosophy that prioritizes safety, cleanliness, and community investment as 
+                the foundation for Millville’s long-term growth. Her agenda emphasizes situational crime prevention through improved lighting and securing 
+                vacant properties, city cleanup and code enforcement, and partnerships for addiction and mental health recovery to address root causes of 
+                instability. She views these efforts as prerequisites for meaningful economic development—arguing that businesses and families won’t invest 
+                in a city that feels unsafe or neglected.
+                <br><br>
+                Claiming political independence, Ranello frames her run as “not with a party, but with purpose.” However, it is fairly well known that she 
+                attends the bi-weekly republican breakfasts, which are now only open to Republicans. While the Millville City Commissioners race is technically 
+                categorized as non-partisan, this type of gray-area messaging should be considered. That being said, she does
+                stress hard work, accountability, and results 
+                over ideology. Her recent campaign messaging also highlights the importance of volunteerism, saying that active community involvement gives 
+                candidates a “boots-on-the-ground” perspective of what residents truly need—reinforcing her belief that leadership starts with service.
+                <br><br>
+                So far, Ranello has maintained consistent engagement through a public Facebook campaign page, her completed InformTheVoteNJ questionnaire, 
+                and an appearance on J.T. Burks’ The Race to Millville City Commission interview series. These efforts reflect genuine transparency and 
+                responsiveness, though voters would still benefit from a centralized website or longer-form public events to consolidate her message and 
+                expand accessibility. (Refer to the transparency explanation below for more details.)
               </p>
             </div>
         </dialog>
@@ -168,20 +174,40 @@
             <div class="modal-content">
               <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id="close2" class="close">
               <h4 class="quick-sum">Rating Explanation</h4>
-              <h6 class="page-title">Dan Dixon</h6>
+              <h6 class="page-title">Marissa Ranello</h6>
               <p>          
-                Marissa Ranello first engaged with InformTheVoteNJ last year while running for Millville City Commission. At that time she was 
-                cooperative—answering our questionnaire and holding several phone conversations to clarify details.
+                Marissa Ranello has shown a consistent willingness to engage with InformTheVoteNJ across two election cycles, maintaining noticeable
+                communication and responsiveness compared to some of her peers. She has answered questionnaires both last year and this year, attended 
+                multiple public events—including the Four Seasons Forum and the InformTheVoteNJ Meet & Greet—and likely the Housing Authority event. 
+                While she did not attend the recorded Candidates Forum, her overall visibility and cooperative track record place her a bit above the baseline 
+                for candidate accessibility in Cumberland County.
                 <br>
                 <br>
-                For the current campaign season, Ranello has again responded to our questionnaire, built a Facebook campaign page, and completed a 10-minute 
-                interview on J.T. Burks’ The Race to Millville City Commission series. These are all positive signals of continued transparency and 
-                accessibility.
+                That said, the 2025 season introduced some mixed results. Ranello may have made a substantive Facebook post about addressing homelessness 
+                on October 6th—just before my October 8th social media review cutoff. This cutoff reflects a 
+                realistic expectation: press and voters alike can only track so much information before Election Day. Campaigns that rely heavily on social 
+                media risk leaving key updates buried under algorithms or lost to timing. As Ranello has shown herself to be communicative in the past, 
+                this serves as a reminder that if candidates want something covered, they should proactively send it to the press rather than assume it 
+                will be discovered. Transparency isn’t just about producing information—it’s about ensuring it reaches the public effectively.
                 <br>
                 <br>
-                That said, there remain opportunities to further raise the status quo of county-wide campaign culture. Steps such as creating a self-made 
-                comprehensive campaign website, hosting well-advertised public appearances, and participating in more lengthy and in-depth interviews 
-                would give voters a fuller picture of her platform before casting their ballots.
+                Another element worth addressing is tone and strategy. Ranello participated in one short interview with J.T. Burks for The Race to Millville 
+                City Commission, while effectively declining other opportunities for longer-form interviews or radio appearances. There’s nothing inherently wrong with 
+                choosing where to appear; every candidate has the right to decide how they manage their message. But when viewed alongside the broader 
+                context—such as off-the-record discussions and the emergence of some campaign-season mudslinging—her selective approach creates an ambiguous 
+                picture. Instead of going fully on the record to clarify her positions and reinforce her professionalism, Ranello’s campaign often straddled 
+                a middle ground between accessibility and caution.
+                <br>
+                <br>
+                That said, it’s important to view her choices within the status quo of local politics. Millville—and Cumberland County more broadly—still 
+                lacks a stable tradition of structured, recorded campaign events or unified press outreach. In that environment, candidates often end up 
+                responding piecemeal to whichever opportunities arise. Ranello’s record remains stronger than some in terms of consistency, but she 
+                represents the broader challenge facing the region: even the cooperative candidates are forced to navigate a system where transparency 
+                depends more on initiative than infrastructure.
+                <br>
+                <br>
+                Overall rating: A Bit Above Average — steady and cooperative across cycles, but limited by selective participation and a campaign culture 
+                that still normalizes fragmented communication.
                 
                 <br>
                 <br>
