garrison quick sum and transparency update

--- a/child_pages/cc-elections/Candidates/garisson_heather.html
+++ b/child_pages/cc-elections/Candidates/garisson_heather.html
@@ -263,15 +263,22 @@
                 </summary>
                 <p>          
 
-                Heather Garrison is a long-time Millville resident and community builder running for City Commissioner.  
-                She has been active in the PTA and local events for years and currently works for the Holly City Development 
-                Corporation on community, economic, and housing initiatives.  
-                In a brief “man on the street” interview she emphasized her belief in the power of community, a desire to 
-                highlight Millville’s positives, and a commitment to make residents feel safe, heard, and included.  
-                While this shows openness to engagement, detailed policy positions and a full platform have not yet been provided.
-                <br>
-                <br>
-                Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
+                Heather Garrison is a lifelong Millville resident and community builder running for City Commissioner. She currently serves as a Community 
+                Builder for the Holly City Development Corporation (HCDC), where she helps coordinate community, economic, and housing initiatives—including 
+                leading monthly food distributions since 2021 that connect families with essential resources. Garrison also serves on the Holly City Family 
+                Center Board of Trustees and has played a central role in neighborhood engagement programs like PlayStreets, which she helped launch in 2016.
+                <br><br>
+                Her deep local involvement includes serving as President of Silver Run Elementary’s PTO for eight years (2014–2022), founding and leading a 
+                Millville Girl Scout Troop (2017–present), and working at Silver Run Elementary from 2017 to 2022. She has earned multiple recognitions 
+                for her civic leadership, including the Outstanding Citizen Award from the Millville Chamber of Commerce (2021), the Vocational Service 
+                Award from Tri-County Rotary (2024), and the Pride in Millville: Joyce Vanaman Award for Volunteerism (2024).
+                <br><br>
+                Garrison’s campaign centers on restoring community pride, highlighting Millville’s strengths, and ensuring residents feel safe, supported, 
+                and heard. Her long track record of service positions her as one of the city’s most experienced community organizers in this election. 
+                However, while her résumé reflects exceptional civic engagement, her campaign has not yet presented detailed policy positions or a 
+                comprehensive platform. Much of her information remains dispersed across social media and local organizations—underscoring the broader 
+                challenge of translating extensive community work into clear, accessible campaign materials. (Refer to the transparency explanation below 
+                for more details.)
 
               </p>
             </details>
@@ -332,15 +339,29 @@
                 <strong>Explanation</strong>
             </summary>
             <p>
-                Relative to the Millville status quo, Heather Garrison’s transparency and accessibility is rated 
-                <strong>Average (Trending Upwards)</strong>. She has made herself available for a brief “man on the street” 
-                interview, offering a glimpse of her background and campaign message about community-driven change.  
-                However, voters looking for a fuller picture of her priorities will find limited detail beyond these 
-                initial statements.  
+                Heather Garrison has demonstrated consistent community-based presence and deep involvement that few candidates can match. Through her role 
+                with the Holly City Development Corporation, she regularly coordinates neighborhood programs and public events, including the monthly 
+                “Chat and Chew” sessions at the Millville Public Library, which invite residents to discuss local issues and build connections in an 
+                informal, welcoming setting. That ongoing forum for public dialogue is comparable, in civic value, to the weekly radio programs hosted 
+                by other candidates—it represents a genuine, sustained channel of engagement outside of election cycles.
                 <br><br>
-                To move toward a stronger rating, Garrison could publish a comprehensively detailed platform on a dedicated 
-                website, host well-advertised meet-and-greet events where residents can ask questions, and participate in 
-                one or more longer-form campaign or press interviews to unpack her message in depth.
+                Garrison attended the Four Seasons Forum and the InformTheVoteNJ Meet & Greet, and likely participated in the Housing Authority event, 
+                but she did not attend the recorded Candidates Forum. Still, her year-round community engagement far exceeds what most candidates demonstrate 
+                during campaign season. Residents who want to meet her can generally do so without much difficulty—a notable strength in a political 
+                environment where some campaigns operate behind social media walls.
+                <br><br>
+                However, while her accessibility is undeniable, transparency in the campaign sense remains limited. Garrison’s Facebook page contains 
+                thoughtful posts, including one about the importance of transparency itself, yet there is still no centralized campaign platform or 
+                clearly documented outline of issue priorities and action plans. Her messaging relies heavily on her reputation and track record rather than detailed plans 
+                or policy proposals. While many voters admire her humility and her “doing the work” mentality, that same approach risks leaving others 
+                unsure of her policy positions when it comes time to vote.
+                <br><br>
+                This distinction—between being visible in the community and being transparent as a candidate—is critical. Accessibility fosters trust, 
+                but transparency provides clarity. In a county where many residents don’t follow politics closely and where election coverage remains 
+                fragmented, the absence of structured campaign materials can unintentionally blur the message.
+                <br><br>
+                Overall rating: Average (Trending Upwards) — exceptionally accessible through civic work and community presence, but limited by the lack 
+                of formal campaign documentation and clear, centralized communication for voters seeking specifics.
                 </p>
         </details>
     </div> 
