taylor quick sum and transparency buttons abandoned

--- a/child_pages/cc-elections/Candidates/taylor_sherman.html
+++ b/child_pages/cc-elections/Candidates/taylor_sherman.html
@@ -248,7 +248,31 @@
         </a>
       </div>
 
-      <button id="quick-summary-reopen" class="quick-sum">quick summary</button>
+      <!-- <button id="quick-summary-reopen" class="quick-sum">quick summary</button> -->
+       <details class="can-sec" id="quick-summary">
+                <summary style="color: blue;">
+                    <strong>Quick Summary</strong>
+                </summary>
+                <p>     
+                  Sherman R. Taylor is a lifelong Millville resident (born 1970) with 38 years in emergency services, including work as an EMT, firefighter, Class I Special Police Officer, Emergency 
+      Management Coordinator/Deputy, and Senior Public Safety Telecommunicator and Communications Training Officer for Cumberland County 911 and the Millville Police Department. He retired 
+      from public safety dispatch in 2024. His family has deep local roots—his father worked at Wheaton Glass for 50 years, his mother served as a controller for local auto dealers since 1955, 
+      and his grandparents operated Robbins Market at 5th & Broad.
+      <br><br>
+      Taylor frames his candidacy around three themes—Strength, Experience, Commitment—with priorities that start with public safety staffing and readiness: bringing the police department “back to 
+      full staff or better,” ensuring the fire department is appropriately staffed with firefighters and EMTs, and improving recruitment and training pipelines. He argues this won’t change 
+      overnight due to hiring timelines but says reversing long-term understaffing is essential.
+      <br><br>
+      Economically, Taylor supports building Millville’s ratable base and positioning the city as “a hub for business and commerce,” which he believes requires the “right economic development team.” 
+      He also emphasizes culture and communication: listening to residents, encouraging community involvement, and restoring civic pride. He has expressed interest in serving as Public Safety 
+      Director if assigned, noting his working relationships with multiple department heads and his ability to contribute in any seat under Millville’s commission form of government.
+      <br><br>
+      Throughout the campaign, Taylor has maintained a visible community presence—attending the Four Seasons Forum, the InformTheVoteNJ Brewery Meet & Greet, and likely the Housing Authority 
+      event—but has not presented a dedicated campaign website or detailed public plan for implementation. His communication has remained primarily through social media posts highlighting broad 
+      goals and past community success stories rather than specific action steps. While his commitment to Millville and decades of service are clear, his campaign materials stop short of offering 
+      voters measurable policy details or a durable, centralized record of his agenda. (Refer to the transparency explanation below for more details.)
+      </p>
+      </details>
 
       <div class="election-date">
         <p>This election is on November 4th, 2025</p>
@@ -267,7 +291,36 @@
       <button class="candidate-ext-site">Transparency Standards Explained</button>
     </a>
     <img class="gauge" src="../../../assets/gauge_kinda_bad.svg" alt="transparency rating gauge - developing">
-    <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
+    <!-- <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button> -->
+    <br>
+         <details class="can-sec" id="transparency-accessibility">
+            <summary style="color: blue;">
+                <strong>Explanation</strong>
+            </summary>
+            <p>
+              Taylor began his campaign with a substantive introductory statement that outlined his background and top priorities, alongside an active Facebook page. 
+      Those early steps provided a slightly stronger baseline of information than many first-time candidates. However, he has not yet produced a dedicated 
+      campaign website, long-form interviews, or a clearly public-facing event organized by his campaign. His appearance at an earlier fundraiser alongside 
+      two other candidates raised the same concerns about voter accessibility and coordination—such events limit press coverage and exclude voters unwilling 
+      to contribute financially.
+      <br><br>
+      Since then, Taylor (like Newell Branin) did take a positive step by attending the Inform The Vote NJ Meet & Greet at Glasstown Brewery. That appearance 
+      allowed for genuine accessibility and visibility in front of voters, filling at least one gap in this campaign season’s sparse public schedule. At the 
+      same time, he declined participation in the Millville Public Library Candidates Forum—the only forum this cycle to be recorded and shared broadly. While 
+      the last-minute nature of the forum makes that decision understandable, the end result is that voters still lack a durable, accessible record of his 
+      agenda and issue positions.
+      <br><br>
+      This highlights a larger structural problem of election-season disorganization: when neither candidates nor civic institutions establish a consistent 
+      framework for fair, public-facing events, transparency becomes piecemeal and reliant on outside invitations. In that environment, voters are left 
+      guessing how much responsibility for the information gap lies with individual campaigns versus the system as a whole.
+      <br><br>
+      To move upward, Taylor would need to centralize his platform in a campaign site with organized issue sections and participate in at least one long-form 
+      interview. The real benefit for voters will come not just from broad priorities, but from the concrete action plans that show how his campaign ideas 
+      would materialize if elected.
+      <br><br>
+      Overall rating: Almost Average — cordial and visible, but lacking detailed, publicly accessible plans or long-form transparency.
+      </p>
+      </details>
   </div>
 
   <br><br>
